# Prusa-Firmware-Buddy

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake
.github/workflows/: build-xl-bbf.yml
cmake/: Findnnvg.cmake
doc/: logging_components.md
include/: printers.h
include/common/: array_extensions.hpp  fsm_base_types.hpp  printer_model.hpp  printer_model_data.hpp
include/device/: board.h
include/guiconfig/: GuiDefaults.hpp
include/leds/: animation_controller.hpp  color.hpp  frame_animation.hpp  led_manager.hpp  side_strip_control.hpp  side_strip_handler.hpp  status_leds_handler.hpp
include/marlin/: Configuration_COREONE.h  Configuration_COREONEL.h  Configuration_COREONEL_adv.h  Configuration_COREONE_adv.h  Configuration_MINI.h  Configuration_MINI_adv.h  Configuration_MK3.5.h  Configuration_MK3.5_adv.h  Configuration_MK4.h  Configuration_MK4_adv.h  Configuration_XL.h  Configuration_XL_DEV_KIT.h  Configuration_XL_DEV_KIT_adv.h  Configuration_XL_Dwarf.h  Configuration_XL_Dwarf_adv.h  Configuration_XL_adv.h  Configuration_iX.h  Configuration_iX_adv.h
include/mbedtls/: cipher_config_ece.h
include/puppies/: Dwarf.hpp  PuppyBootstrap.hpp  ac_controller.hpp  xbuddy_extension.hpp
lib/: AddMarlin.cmake  CMakeLists.txt
lib/OpenPrintTag/: .pre-commit-config.yaml  README.md
lib/Prusa-Error-Codes/: .gitrepo
lib/SG14/: inplace_function.hpp  inplace_vector.hpp  move_only_inplace_function.hpp
lib/WUI/: espif.cpp  wui.cpp
lib/nanocbor/: README.md  meson.build
src/: CMakeLists.txt
src/buddy/: main.cpp  (+2 more)
tests/unit/common/e2ee/: CMakeLists.txt  decryptor.cpp
utils/: bootstrap.py
(+483 files in other folders)
